--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -18,6 +18,23 @@
         class="m-1 btn btn-light btn-outlinee-primary" Button>Signup</button>
       </li>
 
-    </ul>
 
+      <li class="nav-item">
+        <div class="input-group">
+          <div class="form-outline">
+            <input type="search" id="form1" class="form-control" />
+           
+            
+          </div>
+          
+        </div>
+      </li>
+
+      <li class="nav-item">
+        <button type="button" class="btn btn-primary">search</button>
+      </li>
+      
+     
+    </ul>
+   
 </nav>
