--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,16 +5,15 @@
         <div class="banner container-fluid "> </div>
 
         <div>
-            <div class="bg col-lg-6 "></div>
+            <div class="bg col-lg-6 col-sm-6 container-fluid" ></div>
         </div>
-        <div class="container-fluid" style="padding-top: 10px; display: flex; justify-content: space-around;">
-            <button routerLink="dashboard" class="m-1 btn btn-light btn-outlinee-primary" style="background-color: rgb(8, 81, 39);" Button>Signup as a
+        <div class="container-fluid col-lg-12 " style="padding-top: 10px; display: flex; justify-content: space-around;">
+            <button routerLink="dashboard" class="m-1 btn btn-light btn-outlinee-primary " style="background-color: rgb(8, 81, 39);" Button>Signup as a
                 Farmer</button>
-            <button routerLink="login" class="m-1 btn btn-light btn-outlinee-success" style="background-color: rgb(8, 81, 39);" Button>Signup as a Buyer</button>
-            <button routerLink="login" class="m-1 btn btn-light btn-outlinee-primary" style="background-color: rgb(8, 81, 39);" Button>Signup as a
+            <button routerLink="login" class="m-1 btn btn-light btn-outlinee-success " style="background-color: rgb(8, 81, 39);" Button>Signup as a Buyer</button>
+            <button routerLink="login" class="m-1 btn btn-light btn-outlinee-primary " style="background-color: rgb(8, 81, 39);" Button>Signup as a
                 Courier</button>
         </div>
         
-   
     </div>
 </body>
