--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -1,55 +1,57 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-dark">
 
 
-    <ul class="navbar-nav">
-  
-      <li class="nav-item">
-        <button routerLink="dashboard"
-        class="m-1 btn btn-light btn-outlinee-primary" Button>Home</button>
-      </li>
-  
-      <li class="nav-item">
-        <button routerLink="login"
-        class="m-1 btn btn-light btn-outlinee-primary" Button>Login</button>
-      </li>
+  <ul class="navbar-nav">
 
-      <li class="nav-item">
-        <button routerLink="signup"
-        class="m-1 btn btn-light btn-outlinee-primary" Button>Signup</button>
-      </li>
+    <li class="nav-item">
+      <button routerLink="dashboard" class="m-1 btn btn-light btn-outlinee-primary" Button>Home</button>
+    </li>
+
+    <li class="nav-item">
+      <button routerLink="login" class="m-1 btn btn-light btn-outlinee-primary" Button>Login</button>
+    </li>
+
+    <li class="nav-item">
+      <button routerLink="signup" class="m-1 btn btn-light btn-outlinee-primary" Button>Signup</button>
+    </li>
 
 
-      <li class="nav-item">
-        <div class="input-group">
-          <div class="form-outline">
-            <input type="search" id="form1" class="form-control" />
-           
-            
-          </div>
-          
+    <li class="nav-item">
+      <div class="input-group">
+        <div class="form-outline">
+          <input type="search" id="form1" class="form-control" />
+
+
         </div>
-      </li>
 
-      <li class="nav-item">
-        <button type="button" class="btn btn-primary">search</button>
-      </li>
-      
-  
-      
-      <li class="nav-item" style="margin-top: 10px;">
-        <div class="word">cart</div>
-        
-      </li>
+      </div>
+    </li>
 
-      <li class="nav-item" >
+    <li class="nav-item">
+      <button type="button" class="btn btn-primary">search</button>
+    </li>
+
+
+
+    <li class="nav-item" style="margin-top: 10px;">
+      <div class="word">cart</div>
+
+    </li>
+
+    <!--  <li class="nav-item" >
       
         <button type="button" class="btn btn-success">  
            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
           <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
         </svg></button>
       </li>
-      
-     
-    </ul>
-   
+
+    -->
+    <li class="nav-item">
+      <button type="button" class="btn btn-danger">
+        <mat-icon>shopping_cart</mat-icon>
+      </button>
+    </li>
+  </ul>
+
 </nav>
