--- a/src/app/navibar/navibar.component.css
+++ b/src/app/navibar/navibar.component.css
@@ -13,3 +13,16 @@
   font-weight: 900;
 
 }
+
+@media(min-width: 576px) {
+  .vl {
+    border-left: 5px solid green;
+    height: 40px;
+  }
+}
+
+.v2
+{
+  margin-left: 10px; 
+  margin-right: 10px;
+}
