--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -20,10 +20,7 @@
       <div class="input-group">
         <div class="form-outline">
           <input type="search" id="form1" class="form-control" />
-
-
         </div>
-
       </div>
     </li>
 
@@ -31,12 +28,12 @@
       <button type="button" class="btn btn-primary">search</button>
     </li>
 
+    <!--Code for cart button-->
+    <div class="vl v2" ></div>
 
-
-    <li class="nav-item" style="margin-top: 10px;">
-      <div class="word">cart</div>
-
-    </li>
+    <!--<li class="nav-item" style="margin-top: 10px;">-->
+    <div class="word">Cart</div>
+    <!-- </li>-->
 
     <!--  <li class="nav-item" >
       
@@ -48,10 +45,63 @@
 
     -->
     <li class="nav-item">
-      <button type="button" class="btn btn-danger">
+      <button type="button" routerLink="signup" class="btn btn-danger">
         <mat-icon>shopping_cart</mat-icon>
       </button>
     </li>
+
+<!--Code for help button-->
+    <div class="vl v2" ></div>
+
+    <div class="word">Help</div>
+
+    <li class="nav-item">
+      <button type="button" routerLink="signup" class="btn btn-danger">
+        <mat-icon>contact_support</mat-icon>
+      </button>
+    </li>
+
+    
+
+    <!--Code for contact us button-->
+
+    <div class="vl v2" ></div>
+
+    
+    <li class="nav-item">
+      <button type="button" routerLink="signup" class="btn btn-light" style="font-weight: 900;">Contact  us
+      </button>
+    </li>
+
+    
+
+    <!--Code for About us button-->
+
+    <div class="vl v2" ></div>
+
+    
+
+    <li class="nav-item">
+      <button type="button" routerLink="signup" class="btn btn-light" style="font-weight: 900;">About us
+      </button>
+    </li>
+
+    
+
+    <!--Code for Login button-->
+
+    
+    <div class="vl v2" ></div>
+    <div class="word">Login</div>
+
+    <li class="nav-item">
+      <button type="button" routerLink="signup" class="btn btn-danger">
+        <mat-icon>login</mat-icon>
+      </button>
+    </li>
+
+    <div class="vl v2" ></div>
+
   </ul>
 
 </nav>
