login final version

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,41 @@
-<p>login works!</p>
+<!--
 <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+-->
+<div class="banner container-fluid "> </div>
+<div class="bck">
+  <div class="container" style="padding-top: 25px;">
+    <div class="row ">
+      <div class="col text-center " style="  background-color: grey; height: 350px; padding-top: 75px;">
+
+        <h3 style="color: rgb(21, 218, 57);">WELCOME BACK<br></h3>
+        <div style="font-weight: 600;">TO ENJOY ALL OF OUR SERVICES <br>HASSLE FREE <br> LOGIN TO YOUR ACCOUNT</div>
+      </div>
+      <div class="col" style="  background-color: rgb(241, 239, 239); height: 350px; padding-top: 25px;">
+        <h3>LOGIN TO YOUR ACCOUNT</h3>
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+              placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
+          <button type="submit" class="btn btn-primary">LOGIN</button>
+          <div class="etc-login-form">
+            <p>Forgot your password? <a href="#">click here</a></p>
+            <p>New user? <a href="#">create new account</a></p>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+</div>
