--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,12 @@
-<p>signup works!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequatur minus, magni soluta ad, facere quaerat blanditiis ex ipsam ab exercitationem quo magnam! Iste ipsa placeat ut possimus cumque aliquid?
+
+</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quis reprehenderit amet dignissimos error rem corporis, veritatis laborum recusandae, enim repellendus alias, inventore rerum velit autem sunt quisquam iusto aut?
+
+</p>
+<div class="container fluid" style="margin-left: 150px;">
+<app-login></app-login>
+</div>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio voluptatem mollitia, unde illo temporibus recusandae adipisci eaque asperiores laudantium quasi ad quia eligendi blanditiis quisquam cupiditate vero debitis architecto.
+
+</p>
