--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <head></head>
 
 <body>
-    <div class=" bck" style="height: 658px;" >
+    <div class=" bck"  >
         <div class="banner container-fluid "> </div>
 
         <div>
