--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,12 +1,66 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequatur minus, magni soluta ad, facere quaerat blanditiis ex ipsam ab exercitationem quo magnam! Iste ipsa placeat ut possimus cumque aliquid?
+<app-background></app-background>
 
-</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quis reprehenderit amet dignissimos error rem corporis, veritatis laborum recusandae, enim repellendus alias, inventore rerum velit autem sunt quisquam iusto aut?
+<div class="bck">
+    <div class="container" style="padding-top: 25px;">
+        <div class="row ">
+            <div class="col text-center " style="  background-color: grey; height: 550px; padding-top: 75px;">
 
-</p>
-<div class="container fluid" style="margin-left: 150px;">
-<app-login></app-login>
+                <h3 style="color: rgb(21, 218, 57);">HELLO, NEW USER</h3>
+                <div style="font-weight: 600;">ARE YOU NEW TO OUR SERVICES <br>THEN CREATE AN ACCOUNT <br>FOR BETTER
+                    USER <br>EXPERIENCE</div>
+            </div>
+            <div class="col" style="  background-color: rgb(241, 239, 239); height: 550px; padding-top: 25px;">
+                <h3 style="text-align: center;">ENTER YOUR DETAILS</h3>
+                <form>
+
+                    <div class="form-group ">
+                        <label for="firstName">FirstName</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="firstName" >
+                    </div>
+
+
+
+                    <div class="form-group ">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="email">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="phone_number">Phone Number</label>
+                        <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
+                    </div>
+                    <div class="form-group">
+                        <label for="nic_number">NIC Number</label>
+                        <input type="text" class="form-control" id="nic_number" placeholder="971490xxxV">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="password">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="confirm_password">Confirm Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Confirm password">
+                    </div>
+
+                    <div class="form-group">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="gridCheck">
+                          <label class="form-check-label" for="gridCheck">
+                            Above details are true and I agree to the terms and conditions.
+                          </label>
+                        </div>
+                    </div>
+
+
+                    <button type="submit" class="btn btn-primary">Create account</button>
+
+                </form>
+
+            </div>
+        </div>
+    </div>
+
+
 </div>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio voluptatem mollitia, unde illo temporibus recusandae adipisci eaque asperiores laudantium quasi ad quia eligendi blanditiis quisquam cupiditate vero debitis architecto.
-
-</p>
