--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -15,6 +15,10 @@
       <button routerLink="signup" class="m-1 btn btn-light btn-outlinee-primary" Button>Signup</button>
     </li>
 
+    <li class="nav-item">
+      <button routerLink="admin_pannel" class="m-1 btn btn-light btn-outlinee-primary" Button>Admin pannel</button>
+    </li>
+
 
     <li class="nav-item">
       <div class="input-group">
