--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -22,6 +22,9 @@
     <li class="nav-item">
       <button routerLink="order" class="m-1 btn btn-light btn-outlinee-primary" Button>Order</button>
     </li>
+    <li class="nav-item">
+      <button routerLink="farmer_view" class="m-1 btn btn-light btn-outlinee-primary" Button>Farmer</button>
+    </li>
 
 
     <li class="nav-item">
