--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -7,9 +7,9 @@
       <button routerLink="dashboard" class="m-1 btn btn-light btn-outlinee-primary" Button>Home</button>
     </li>
 
-    <li class="nav-item">
+    <!--<li class="nav-item">
       <button routerLink="login" class="m-1 btn btn-light btn-outlinee-primary" Button>Login</button>
-    </li>
+    </li>-->
 
     <li class="nav-item">
       <button routerLink="signup" class="m-1 btn btn-light btn-outlinee-primary" Button>Signup</button>
@@ -22,10 +22,15 @@
     <li class="nav-item">
       <button routerLink="order" class="m-1 btn btn-light btn-outlinee-primary" Button>Order</button>
     </li>
+
     <li class="nav-item">
       <button routerLink="farmer_view" class="m-1 btn btn-light btn-outlinee-primary" Button>Farmer</button>
     </li>
 
+    <li class="nav-item">
+      <button routerLink="delivery" class="m-1 btn btn-light btn-outlinee-primary" Button>Delivey</button>
+    </li>
+   
 
     <li class="nav-item">
       <div class="input-group">
