--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-dark">
 
 
-  <ul class="navbar-nav">
+  <ul class="navbar-nav" >
 
     <li class="nav-item">
-      <button routerLink="dashboard" class="m-1 btn btn-light btn-outlinee-primary" Button>Home</button>
+      <button routerLink="dashboard" class="m-1 btn btn-light btn-outlinee-primary"  style="font-weight: 900;" Button>Home</button>
     </li>
 
     <!--<li class="nav-item">
@@ -12,23 +12,23 @@
     </li>-->
 
     <li class="nav-item">
-      <button routerLink="signup" class="m-1 btn btn-light btn-outlinee-primary" Button>Signup</button>
+      <button routerLink="signup" class="m-1 btn btn-light btn-outlinee-primary" style="font-weight: 900;" Button>Signup</button>
     </li>
 
     <li class="nav-item">
-      <button routerLink="admin_pannel" class="m-1 btn btn-light btn-outlinee-primary" Button>Admin pannel</button>
+      <button routerLink="admin_pannel" class="m-1 btn btn-light btn-outlinee-primary" style="font-weight: 900;" Button>Admin pannel</button>
     </li>
 
     <li class="nav-item">
-      <button routerLink="order" class="m-1 btn btn-light btn-outlinee-primary" Button>Order</button>
+      <button routerLink="order" class="m-1 btn btn-light btn-outlinee-primary" style="font-weight: 900;" Button>Order</button>
     </li>
 
     <li class="nav-item">
-      <button routerLink="farmer_view" class="m-1 btn btn-light btn-outlinee-primary" Button>Farmer</button>
+      <button routerLink="farmer_view" class="m-1 btn btn-light btn-outlinee-primary" style="font-weight: 900;" Button>Farmer</button>
     </li>
 
     <li class="nav-item">
-      <button routerLink="delivery" class="m-1 btn btn-light btn-outlinee-primary" Button>Delivey</button>
+      <button routerLink="delivery" class="m-1 btn btn-light btn-outlinee-primary" style="font-weight: 900;" Button>Delivey</button>
     </li>
    
 
