2n v of full backend edit

--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -111,7 +111,7 @@
     <div class="word">Login</div>
 
     <li class="nav-item">
-      <button type="button" routerLink="signup" class="btn btn-danger">
+      <button type="button" routerLink="login" class="btn btn-danger">
         <mat-icon>login</mat-icon>
       </button>
     </li>
