--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,60 +3,163 @@
 <div class="bck">
     <div class="container" style="padding-top: 25px;">
         <div class="row ">
-            <div class="col text-center " style="  background-color: grey; height: 550px; padding-top: 75px;">
+            <div class="col text-center " style="  background-color: grey; height: 600px; padding-top: 75px;">
 
                 <h3 style="color: rgb(21, 218, 57);">HELLO, NEW USER</h3>
                 <div style="font-weight: 600;">ARE YOU NEW TO OUR SERVICES <br>THEN CREATE AN ACCOUNT <br>FOR BETTER
                     USER <br>EXPERIENCE</div>
             </div>
-            <div class="col" style="  background-color: rgb(241, 239, 239); height: 550px; padding-top: 25px;">
+            <div class="col" style="  background-color: rgb(241, 239, 239); height: 600px; padding-top: 25px;">
                 <h3 style="text-align: center;">ENTER YOUR DETAILS</h3>
-                <form>
+                <mat-tab-group>
+                    <mat-tab label="Customer"> 
+                        <form>
 
-                    <div class="form-group ">
-                        <label for="firstName">FirstName</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="firstName" >
-                    </div>
+                            <div class="form-group ">
+                                <label for="firstName">FirstName</label>
+                                <input type="text" class="form-control" id="firstName" placeholder="firstName" >
+                            </div>
+                        
+                        
+                        
+                            <div class="form-group ">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="email">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="phone_number">Phone Number</label>
+                                <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
+                            </div>
+                            <div class="form-group">
+                                <label for="nic_number">NIC Number</label>
+                                <input type="text" class="form-control" id="nic_number" placeholder="971490xxxV">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="password">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="confirm_password">Confirm Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Confirm password">
+                            </div>
+                        
+                            <div class="form-group">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" id="gridCheck">
+                                  <label class="form-check-label" for="gridCheck">
+                                    Above details are true and I agree to the terms and conditions.
+                                  </label>
+                                </div>
+                            </div>
+                        
+                        
+                            <button type="submit" class="btn btn-primary">Create account</button>
+                        
+                        </form>
+                        
+                    </mat-tab>
+                    <mat-tab label="Farmer"> 
+                        <form>
 
+                            <div class="form-group ">
+                                <label for="firstName">FirstName</label>
+                                <input type="text" class="form-control" id="firstName" placeholder="firstName" >
+                            </div>
+                        
+                        
+                        
+                            <div class="form-group ">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="email">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="phone_number">Phone Number</label>
+                                <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
+                            </div>
+                            <div class="form-group">
+                                <label for="nic_number">NIC Number</label>
+                                <input type="text" class="form-control" id="nic_number" placeholder="971490xxxV">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="password">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="confirm_password">Confirm Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Confirm password">
+                            </div>
+                        
+                            <div class="form-group">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" id="gridCheck">
+                                  <label class="form-check-label" for="gridCheck">
+                                    Above details are true and I agree to the terms and conditions.
+                                  </label>
+                                </div>
+                            </div>
+                        
+                        
+                            <button type="submit" class="btn btn-primary">Create account</button>
+                        
+                        </form>
+                    </mat-tab>
+                    <mat-tab label="Courier"> 
+                        <form>
 
-
-                    <div class="form-group ">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="email">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="phone_number">Phone Number</label>
-                        <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
-                    </div>
-                    <div class="form-group">
-                        <label for="nic_number">NIC Number</label>
-                        <input type="text" class="form-control" id="nic_number" placeholder="971490xxxV">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="password">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="confirm_password">Confirm Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Confirm password">
-                    </div>
-
-                    <div class="form-group">
-                        <div class="form-check">
-                          <input class="form-check-input" type="checkbox" id="gridCheck">
-                          <label class="form-check-label" for="gridCheck">
-                            Above details are true and I agree to the terms and conditions.
-                          </label>
-                        </div>
-                    </div>
-
-
-                    <button type="submit" class="btn btn-primary">Create account</button>
-
-                </form>
+                            <div class="form-group ">
+                                <label for="firstName">FirstName</label>
+                                <input type="text" class="form-control" id="firstName" placeholder="firstName" >
+                            </div>
+                        
+                        
+                        
+                            <div class="form-group ">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="email">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="phone_number">Phone Number</label>
+                                <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
+                            </div>
+                            <div class="form-group">
+                                <label for="nic_number">NIC Number</label>
+                                <input type="text" class="form-control" id="nic_number" placeholder="971490xxxV">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="password">
+                            </div>
+                        
+                            <div class="form-group">
+                                <label for="confirm_password">Confirm Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Confirm password">
+                            </div>
+                        
+                            <div class="form-group">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" id="gridCheck">
+                                  <label class="form-check-label" for="gridCheck">
+                                    Above details are true and I agree to the terms and conditions.
+                                  </label>
+                                </div>
+                            </div>
+                        
+                        
+                            <button type="submit" class="btn btn-primary">Create account</button>
+                        
+                        </form>
+                    </mat-tab>
+                  </mat-tab-group>
+                  
+               
 
             </div>
         </div>
@@ -64,3 +167,4 @@
 
 
 </div>
+
