--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col" style="  background-color: rgb(241, 239, 239); height: 600px; padding-top: 25px;">
                 <h3 style="text-align: center;">ENTER YOUR DETAILS</h3>
-                <mat-tab-group>
+                <mat-tab-group style="width:490px ;">
                     <mat-tab label="Customer"> 
                         <form>
 
