navigation on navibar

--- a/src/app/navibar/navibar.component.html
+++ b/src/app/navibar/navibar.component.html
@@ -61,7 +61,7 @@
 
     -->
     <li class="nav-item">
-      <button type="button" routerLink="signup" class="btn btn-danger">
+      <button type="button" routerLink="cart" class="btn btn-danger">
         <mat-icon>shopping_cart</mat-icon>
       </button>
     </li>
@@ -72,7 +72,7 @@
     <div class="word">Help</div>
 
     <li class="nav-item">
-      <button type="button" routerLink="signup" class="btn btn-danger">
+      <button type="button" routerLink="help" class="btn btn-danger">
         <mat-icon>contact_support</mat-icon>
       </button>
     </li>
@@ -85,7 +85,7 @@
 
     
     <li class="nav-item">
-      <button type="button" routerLink="signup" class="btn btn-light" style="font-weight: 900;">Contact  us
+      <button type="button" routerLink="contact_us" class="btn btn-light" style="font-weight: 900;">Contact  us
       </button>
     </li>
 
@@ -98,7 +98,7 @@
     
 
     <li class="nav-item">
-      <button type="button" routerLink="signup" class="btn btn-light" style="font-weight: 900;">About us
+      <button type="button" routerLink="about_us" class="btn btn-light" style="font-weight: 900;">About us
       </button>
     </li>
 
