--- a/src/app/admin-pannel/admin-pannel.component.html
+++ b/src/app/admin-pannel/admin-pannel.component.html
@@ -7,11 +7,11 @@
         </div>
         <div class="container-fluid col-lg-12 "
             style="padding-top: 10px; display: flex; justify-content: space-around;">
-            <button routerLink="dashboard" class="m-1 btn btn-light btn-outlinee-primary "
+            <button routerLink="/order" class="m-1 btn btn-light btn-outlinee-primary "
                 style="background-color: rgb(8, 81, 39);" Button>Confirm Orders</button>
-            <button routerLink="login" class="m-1 btn btn-light btn-outlinee-success "
+            <button routerLink="/delivery" class="m-1 btn btn-light btn-outlinee-success "
                 style="background-color: rgb(8, 81, 39);" Button>Confirm Delivery</button>
-            <button routerLink="login" class="m-1 btn btn-light btn-outlinee-primary "
+            <button routerLink="/manage_profile" class="m-1 btn btn-light btn-outlinee-primary "
                 style="background-color: rgb(8, 81, 39);" Button>Manage Profile</button>
                 <!---->
 
