--- a/src/app/order/order.component.css
+++ b/src/app/order/order.component.css
@@ -6,7 +6,7 @@
 
 .bg {
     /* The image used */
-    background-image: url(../../assets/fr.png);
+    background-image: url(../../assets/ELMS005.png);
     /* Full height */
     /*height: 100%;
     /* Center and scale the image nicely */
