--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,39 @@
-<p>cart works!</p>
+<div class="container-fluid" style="margin-top: 25px;">
+    <table class="table">
+        <thead class="table table-dark">
+          <tr>
+            <th scope="col">Index</th>
+            <th scope="col">Name</th>
+            <th scope="col">Unit price (Rs)</th>
+            <th scope="col">Quantity (Kg)</th>
+            <th scope="col">Price (Rs)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th><!--should be binded-->
+            <td>Carrot</td>
+            <td>240</td>
+            <td>5</td>
+            <td>1200</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>leeks</td>
+            <td>250</td>
+            <td>5</td>
+            <td>1250</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Beans</td>
+            <td>200</td>
+            <td>5</td>
+            <td>1000</td>
+          </tr>
+        </tbody>
+      </table>
+</div>
+
+  
+ 
