--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,27 +12,48 @@
       </div>
       <div class="col" style="  background-color: rgb(241, 239, 239); height: 350px; padding-top: 25px;">
         <h3>LOGIN TO YOUR ACCOUNT</h3>
-        <form>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-              placeholder="Enter email">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName="email"
+              placeholder="Enter email"  [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
+
+              <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                <div *ngIf="f['email'].errors['required']">Email is required</div>
+                <div *ngIf="f['email'].errors['email']">Email is invalid</div>
+              </div>
+
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
+
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" formControlName="password"
+            [ngClass]="{ 'is-invalid': submitted && f['password'].errors }">
+
+            <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+              <div *ngIf="f['password'].errors['required']">Password is required</div> 
+              <div *ngIf="f['password'].errors['minlength']">
+                Password must be at least 6 characters
+              </div>
+            </div>
+
           </div>
+
           <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
           </div>
+
           <button type="submit" class="btn btn-primary">LOGIN</button>
           <div class="etc-login-form">
             <p>Forgot your password? <a href="#">click here</a></p>
             <p>New user? <a href="#">create new account</a></p>
           </div>
+
         </form>
+
       </div>
     </div>
   </div>
