validations in signup

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,56 +3,122 @@
 <div class="bck">
     <div class="container" style="padding-top: 25px;">
         <div class="row ">
-            <div class="col text-center " style="  background-color: grey; height: 600px; padding-top: 75px;">
+            <div class="col text-center " style="  background-color: grey; height: 720px; padding-top: 75px;">
 
                 <h3 style="color: rgb(21, 218, 57);">HELLO, NEW USER</h3>
                 <div style="font-weight: 600;">ARE YOU NEW TO OUR SERVICES <br>THEN CREATE AN ACCOUNT <br>FOR BETTER
                     USER <br>EXPERIENCE</div>
             </div>
-            <div class="col" style="  background-color: rgb(241, 239, 239); height: 600px; padding-top: 25px;">
+            <div class="col" style="  background-color: rgb(241, 239, 239); height: 720px; padding-top: 25px;">
                 <h3 style="text-align: center;">ENTER YOUR DETAILS</h3>
                 <mat-tab-group style="width:490px ;">
                     <mat-tab label="Customer"> 
-                        <form>
+                        <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
                             <div class="form-group ">
-                                <label for="firstName">FirstName</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="firstName" >
+                                <label for="fullname">Fullname</label>
+                                <input type="text" class="form-control" id="fullname" placeholder="fullname"  formControlName="fullname"
+                                [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }">
+
+                                <div *ngIf="submitted && f['fullname'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['fullname'].errors['required']">Fullname is required</div>
+                                  </div>
+
                             </div>
                         
                         
                         
                             <div class="form-group ">
                                 <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="email">
+                                <input type="email" class="form-control" id="email" placeholder="email" 
+                                formControlName="email" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
+
+                                <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['email'].errors['required']">Email is required</div>
+                                    <div *ngIf="f['email'].errors['email']">Email is invalid</div>
+                                  </div>
                             </div>
                         
                             <div class="form-group">
                                 <label for="phone_number">Phone Number</label>
-                                <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
+                                <input type="text" class="form-control" id="phone_number" placeholder="07x xxxxxxx" formControlName="phone_number"
+                                [ngClass]="{ 'is-invalid': submitted && f['phone_number'].errors }"/>
+
+                                <div *ngIf="submitted && f['phone_number'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['phone_number'].errors['required']">nic_number is required</div>
+                                    <div *ngIf="f['phone_number'].errors['minlength']">
+                                        Enter a valid
+                                    </div>
+                                    <div *ngIf="f['phone_number'].errors['maxlength']">
+                                        Enter a valid
+                                    </div>
+                                  </div>
+
                             </div>
+
+
                             <div class="form-group">
                                 <label for="nic_number">NIC Number</label>
-                                <input type="text" class="form-control" id="nic_number" placeholder="971490xxxV">
+                                <input type="text" class="form-control" id="nic_number" placeholder="971490xxxV" formControlName="nic_number"
+                                [ngClass]="{ 'is-invalid': submitted && f['nic_number'].errors }">
+
+                                <div *ngIf="submitted && f['nic_number'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['nic_number'].errors['required']">NIC is required</div>
+                                    <div *ngIf="f['nic_number'].errors['minlength']">
+                                        Enter a valid NIC
+                                    </div>
+                                    <div *ngIf="f['nic_number'].errors['maxlength']">
+                                        Enter a valid NIC
+                                    </div>
+                                  </div>
                             </div>
                         
                             <div class="form-group">
                                 <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="password">
+                                <input type="password" class="form-control" id="password" placeholder="password" formControlName="password"
+                                [ngClass]="{ 'is-invalid': submitted && f['password'].errors }">
+
+                                <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['password'].errors['required']">Password is required</div>
+                                    <div *ngIf="f['password'].errors['minlength']">
+                                      Password must be at least 6 characters
+                                    </div>
+                                    <div *ngIf="f['password'].errors['maxlength']">
+                                      Password must not exceed 40 characters
+                                    </div>
+                                  </div>
                             </div>
                         
                             <div class="form-group">
-                                <label for="confirm_password">Confirm Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Confirm password">
+                                <label for="confirmPassword">Confirm Password</label>
+                                <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm password" formControlName="confirmPassword"
+                                [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }">
+
+                                <div
+                                *ngIf="submitted && f['confirmPassword'].errors"
+                                class="invalid-feedback"
+                              >
+                                <div *ngIf="f['confirmPassword'].errors['required']">
+                                  Confirm Password is required
+                                </div>
+                                <div *ngIf="f['confirmPassword'].errors['matching']">
+                                  Confirm Password does not match
+                                </div>
+                              </div>
                             </div>
                         
                             <div class="form-group">
                                 <div class="form-check">
-                                  <input class="form-check-input" type="checkbox" id="gridCheck">
+                                  <input class="form-check-input" type="checkbox" id="gridCheck"  formControlName="acceptTerms"
+                                  [ngClass]="{ 'is-invalid': submitted && f['acceptTerms'].errors }"> 
                                   <label class="form-check-label" for="gridCheck">
                                     Above details are true and I agree to the terms and conditions.
                                   </label>
                                 </div>
+
+                                <div *ngIf="submitted && f['acceptTerms'].errors" class="invalid-feedback">
+                                    Accept Terms is required
+                                  </div>
                             </div>
                         
                         
@@ -77,8 +143,8 @@
                             </div>
                         
                             <div class="form-group">
-                                <label for="phone_number">Phone Number</label>
-                                <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
+                                <label for="nic_number">Phone Number</label>
+                                <input type="number" class="form-control" id="nic_number" placeholder="07x xxxxxxx">
                             </div>
                             <div class="form-group">
                                 <label for="nic_number">NIC Number</label>
@@ -105,7 +171,7 @@
                             </div>
                         
                         
-                            <button type="submit" class="btn btn-primary">Create account</button>
+                             <!--  <button type="submit" class="btn btn-primary">Create account</button>-->
                         
                         </form>
                     </mat-tab>
@@ -125,8 +191,8 @@
                             </div>
                         
                             <div class="form-group">
-                                <label for="phone_number">Phone Number</label>
-                                <input type="number" class="form-control" id="phone_number" placeholder="07x xxxxxxx">
+                                <label for="nic_number">Phone Number</label>
+                                <input type="number" class="form-control" id="nic_number" placeholder="07x xxxxxxx">
                             </div>
                             <div class="form-group">
                                 <label for="nic_number">NIC Number</label>
@@ -153,7 +219,7 @@
                             </div>
                         
                         
-                            <button type="submit" class="btn btn-primary">Create account</button>
+                          <!--  <button type="submit" class="btn btn-primary">Create account</button>-->
                         
                         </form>
                     </mat-tab>
